# tetris

./: Cargo.toml  README.md
data/: preferences.cfg
src/: main.rs
