[package]
name = "tetris"
version = "0.1.0"
authors = ["laur <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
rand = "0.7.3"
simple-matrix = "0.1"
lazy_static = "1.4.0"